# cf-cli

./: AGENTS.md  Cargo.toml  README.md  SKILL.md  SKILLS.md
crates/cli/: Cargo.toml
crates/cli/shared/: Dockerfile
crates/cli/src/: app_config.rs  cargo_main.rs  common.rs  lib.rs  main.rs
crates/cli/src/config/: app_config.rs  mod.rs
crates/cli/src/config/db/: mod.rs
crates/cli/src/config/modules/: add.rs  db.rs  list.rs  mod.rs  remove.rs
crates/cli/src/deploy/: docker.rs  mod.rs  template.rs
crates/cli/src/docs/: mod.rs
crates/cli/src/init/: mod.rs
crates/cli/src/lint/: mod.rs
crates/cli/src/mod/: add.rs  init.rs  mod.rs
crates/cli/src/run/: mod.rs  run_loop.rs  templates.rs
crates/cli/src/setup/: init.rs  mod.rs  module.rs  tools.rs
crates/module-parser/: Cargo.toml
crates/module-parser/src/: config.rs  lib.rs  metadata.rs  module_rs.rs  source.rs
