[workspace]
members = ["crates/cli"]
resolver = "3"

[workspace.package]
version = "0.0.1"
license-file = "LICENSE"
authors = ["CyberFabric"]
repository = "https://github.com/cyberfabric/cf-cli"
description = "Command-line interface for CyberFabric"
edition = "2024"
readme = "README.md"

[workspace.dependencies]
anyhow = { version = "1.0" }
clap = { version = "4.5", features = ["derive"] }
cargo-generate = { version = "0.23.7" }
serde-saphyr = { version = "0.0.19" }

