[package]
name = "cli"
version.workspace = true
edition.workspace = true
license-file.workspace = true
authors.workspace = true
repository.workspace = true
description.workspace = true
readme.workspace = true
publish = false

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
cargo-generate = { workspace = true }
serde-saphyr = { workspace = true }
